--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,14 @@
+spring:
+  datasourc:
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+jpa:
+  hibernate.ddl-auto: update
+  show-sql: true
+  properties:
+    hibernate:
+      dialect: org.hibernate.dialect.MySQL8Dialect
 eureka:
   client:
     fetch-registry: true
